# OOC

./: CMakeLists.txt
AbstractDataTypes/: Bag.c  Object.h  Set.c  Set.h  main.c  new.h  note.md
DynamicLinkage/: SelfDefine.h  String.c  String.h  main.c  new.c  new.h
ProgrammingSavvyArithmmeticExpression/: Parse.c  Parse.h  main.c  note.md  value.c  value.h
